--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "caregiverlab",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
+    "dev":     "astro dev",
+    "build":   "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "sync":    "astro sync"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "astro":             "^4.16.0",
+    "@astrojs/sitemap":  "^3.2.0"
   }
 }
